# forgeerp

./: .cursorrules  .gitignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  install-cursor-extensions.sh
.github/: SECRETS.md
.github/workflows/: build-images.yml  ci.yml  deploy.yml  generate-docs.yml  generate-workflows.yml  setup-runners.yml
backend/: .gitignore  Dockerfile  Makefile  pytest.ini  requirements.txt
backend/addons/: __init__.py
backend/forgeerp/: __init__.py  main.py
backend/scripts/: README_DOCUMENTACAO.md  create_admin_user.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_clients.py  test_permissions.py
cli/: Dockerfile  pyproject.toml
cli/forgeerp/: __init__.py
cli/forgeerp/cli/: main.py
docs/: README.md
docs/funcional/: COMO_USAR.md  FUNCIONAL.md  README.md
docs/operacional/: DOCUMENTACAO_VISUAL.md  GUIA_PASSO_A_PASSO.md  README.md  RESUMO_DOCUMENTACAO.md  STEP_BY_STEP_GUIDE.md
docs/tecnica/: ARQUITETURA_ATUAL.md  ARQUITETURA_DEPLOY.md  ARQUITETURA_TESTES.md  COMO_TESTAR.md  DAILY_USAGE.md  DECISOES_TECNICAS.md  DEPLOY_SIMPLES.md  ESTRUTURA.md  EXPLICACAO_FIXTURES.md  FLUXO_BASICO_FALTANDO.md  FRONTEND_README.md  IMPLEMENTACAO.md  INSTALACAO.md  INSTALAR_ACT.md  O_QUE_FALTA_IMPLEMENTAR.md  PLAYWRIGHT_VS_SELENIUM.md  README.md  RESUMO_IMPLEMENTACAO.md  STATUS_MVP.md  (+4 more)
frontend/: Dockerfile  index.html  package.json  vite.config.ts
scripts/: README.md  first_push.sh  install-fedora.sh  install-macos.sh  install-ubuntu.sh  rewrite_history_english.sh  setup_github_secrets.sh  setup_runners.sh
(+66 files in other folders)
