[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeerp-cli"
version = "0.1.0"
description = "ForgeERP CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
forge = "forgeerp.cli.main:app"

[tool.setuptools]
packages = ["forgeerp"]

